# briefly

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: premerge.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: globals.css  import-page.tsx  layout.tsx  page.tsx
apps/desktop/src/lib/: contracts.ts  desktop.ts  focus-dashboard.ts  import-flow.ts
apps/desktop/tests/component/: README.md
apps/desktop/tests/e2e/: README.md
apps/desktop/tests/unit/: bootstrap.test.mjs  focus-dashboard.test.mjs  import-flow.test.mjs
contracts/ai/: extraction-response.example.json
contracts/mailbox/: normalized-message.example.json
contracts/scoring/: signal-score.example.json
crates/briefly-ai/: Cargo.toml
crates/briefly-ai/src/: lib.rs
crates/briefly-ai/tests/: bootstrap.rs
crates/briefly-briefing/: Cargo.toml
crates/briefly-briefing/src/: lib.rs
crates/briefly-briefing/tests/: bootstrap.rs
crates/briefly-contracts/: Cargo.toml
crates/briefly-contracts/src/: lib.rs
crates/briefly-ingest/: Cargo.toml
crates/briefly-ingest/src/: lib.rs
crates/briefly-ingest/tests/: bootstrap.rs  fixture_import.rs
crates/briefly-score/: Cargo.toml
crates/briefly-score/src/: lib.rs
crates/briefly-score/tests/: bootstrap.rs
crates/briefly-store/: Cargo.toml
crates/briefly-store/migrations/: 0001_initial_schema.sql  README.md
crates/briefly-store/src/: lib.rs
crates/briefly-store/tests/: bootstrap.rs  import_persistence.rs
docs/: ai-extraction-contract.md  implementation-plan.md  local-data-model.md  phase-1-mailbox-ingestion-spec.md  phase-1-product-spec.md  repo-bootstrap-plan.md  signal-scoring-rubric.md
docs/adr/: 0001-local-first-desktop-architecture.md  0002-phase-1-mbox-ingestion-before-live-sync.md  0003-managed-ai-via-digitalocean-gradient.md  README.md
fixtures/contracts/: README.md
fixtures/mailbox/: minimal-thread.mbox
fixtures/scoring/: high-priority-thread.json
fixtures/ui/: dashboard-seed.json  focus-dashboard-artifact.html
scripts/: README.md  check  run  setup  validate-json.mjs
