[package]
name = "briefly-score"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
briefly-contracts = { path = "../briefly-contracts" }
briefly-store = { path = "../briefly-store" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
