[package]
name = "briefly-desktop-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
briefly-ingest = { path = "../../../crates/briefly-ingest" }
briefly-contracts = { path = "../../../crates/briefly-contracts" }
serde.workspace = true
tauri = "2.10.3"
tauri-plugin-dialog = "2.7.0"

[build-dependencies]
tauri-build = "2.5.6"
