[package]
name = "briefly-desktop-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
briefly-score = { path = "../../../crates/briefly-score" }
briefly-store = { path = "../../../crates/briefly-store" }
briefly-ingest = { path = "../../../crates/briefly-ingest" }
briefly-contracts = { path = "../../../crates/briefly-contracts" }
serde.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
tauri = "2.10.3"
tauri-plugin-dialog = "2.7.0"

[target.'cfg(target_os = "macos")'.build-dependencies]
tauri-build = "2.5.6"
